2011-07-31  Miriam Friedel  <mfriedel@phenogenomics.ca>
	* ChangeLog created as required for autoconf. A detailed list of changes can be found by using git log. 

	
	